# audit-anchor

./: .gitignore  README.md  audit_anchor.py  pyproject.toml
examples/: langchain_callback.py  mcp_tool.py  sample_audit_log.jsonl
examples/decision-receipt/: README.md  decision_receipt.jcs.ots  parameters.json  verify.py
examples/guix-checkpoint/: README.md  channels.scm  commit_id.txt  commit_id.txt.ots  transcript.txt  verify_courtes.sh
examples/neotoma-snapshot/: README.md  anchor.py  neotoma_snapshot.py  receipt.json  sample_observations.json  snapshot_core.json  verify.py
tests/: test_audit_anchor.py
